# Web2Doc

./: .env.example  .gitignore  Cargo.toml  README.md  cliff.toml  constitution.md  justfile
.github/workflows/: ci.yml  release.yml
.opencode/skills/spec-driven-development/: SKILL.md
docs/specs/chrome-windows/: plan.md  spec.md  tasks.md
docs/specs/web2doc/: plan.md  spec.md  tasks.md
scripts/: install-skill.ps1  install-skill.sh  install.ps1  install.sh
skills/web2doc/: SKILL.md
src/: assets.rs  cli.rs  config.rs  convert.rs  discover.rs  error.rs  extract.rs  lib.rs  llm.rs  main.rs  obs.rs  pipeline.rs  report.rs  rewrite.rs  robots.rs  rules.rs  urlx.rs  writer.rs
src/fetcher/: detect.rs  dynamic.rs  mod.rs  static_.rs
tests/: static_e2e.rs
web2doc-dyn/: index.md
web2doc-dyn/.cache/: 476cd3fa85bf4d27.json  a94dd05f6921bdfb.json  e0998be6bfe0ac1c.json
web2doc-dyn/zh-cn/api/: create-chat-completion.md  create-completion.md  deepseek-api.md
web2doc-html/: index.md  manifest.json
web2doc-html/.cache/: a94dd05f6921bdfb.json  e0998be6bfe0ac1c.json
web2doc-html/zh-cn/api/: create-chat-completion.html  create-completion.html  deepseek-api.html
